[refact] : refact method